# atlas-rs

./: .travis.yml  Cargo.toml
data/: 150729_020200.sbd  150731_230159.sbd  160714_000240.sbd  160714_000252.sbd  160809_010502.sbd  160809_010515.sbd  160812_220103.sbd  160812_230048.sbd  160812_230111.sbd  160816_180158.sbd  config.toml  server.toml  ssp.txt
html/: index.html
src/: cam.rs  camera.rs  error.rs  heartbeat.rs  lib.rs  magick.rs  main.rs  server.rs  sutron.rs  units.rs  watch.rs
src/heartbeat/: builder.rs  mod.rs  source.rs  watcher.rs
static/: dygraph.min.js  index.css  index.js
templates/: index.hbs  status.hbs
